--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+body {
+    font-family: Helvetica;
+    font-weight: bold;
+}
 h1 {
-    font-size:100px;
+    background-image: url('https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg');
+    font-size: 100px;
+    color: khaki;
+    text-align: center;
+}
+
+h2 {
+    font-size: 32px;
+    color: white;
+}
+
+#brushes {
+    background-color: mediumspringgreen;
+}
+
+#frames {
+    background-color: lightcoral;
+}
+
+#paint {
+    background-color: skyblue;
+}
+
+.price {
+    color: blue;
 }
