--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ li:last-child {
   
 li a {
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     text-decoration: none;
 }
