--- a/style.css
+++ b/style.css
@@ -1,32 +1,111 @@
-* {
-    font-family: Helvetica;
+html {
+    height:100%;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    height:100%;
+    background-image: url(https://wallpaperaccess.com/full/2217435.jpg);
+    background-size: cover;
+    margin: 0;
+}
+
+
+
+section {
+    height: 100%;
+    max-width: 2400px;
+    margin: 0 auto;
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
+header {
+    margin: 0 auto;
+    width: 100%;
 }
 
 nav {
+    vertical-align: middle;
+    height: 100px;
+    overflow: hidden;
+    width: 90%;
     margin: 0 auto;
+    padding: 10px;
+    text-align: right;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    font-size: 2em;
-}
-  
-li {
-    float: left;
-    width: 24.8%;
-    border: 1px solid black;
-}
-  
-li a {
-    display: block;
-    color: black;
+nav a {
+    color: #f5f5f5;
     text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
+    font-size: 1.5em;
 }
   
-li a:hover {
+nav a.active {
     text-decoration: underline;
 }
+
+main {
+    width: 85%;
+    margin: 0 auto;
+    border: 1px solid blue;
+}
+
+.heading {
+    color: #f5f5f5;
+    height: 30%;
+    width: 75%;
+    border: 1px dashed pink;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    
+}
+
+.heading .text {
+    margin: 0;
+    width: 70%;
+    order: 1;
+    flex-grow: 2;
+}
+
+.heading h1 {
+    margin: 0;
+    height: 48%;
+    border: 1px solid lightblue;
+    font-size: 5vw;
+    margin-bottom: 20px;
+}
+
+.heading p {
+    margin: 0;
+    height: 48%;
+    border: 1px solid pink;
+    font-family: "Courier New";
+    font-size: 1.5vw;
+}
+
+.heading img {
+    width: auto;
+    order: 2;
+    flex-grow: 1;
+    height: 100%;
+}
+
+.portfolio {
+    color: #f5f5f5;
+    margin: 0;
+}
+
+.page-footer {
+    color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: large;
+}
+
